src/app/globals.css
body {
  margin: 0;
  box-sizing: border-box;
}

.maps-page {
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: stretch;
}

.map-container {
  height: 100%;
}

.autocomplete {
  z-index: 10;
  position: absolute;
  top: 10px;
  right: 10px;
  border-radius: 25px;
  background-color: #fff;
  padding: 8px 4px 8px 6px;
  width: 40ch;
  border: 2px solid gray;
}

.listview {
  height: calc(100vh - 140px);
}

@media screen and (max-width: 350px) {
  .autocomplete {
    width: 90%;
  }
}

